--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,7 @@
 .float-right{float:right;}
 .grey-background {background-color: grey;}
 .white-color{color:#FFF;}
+
 .tooltip-holder 
 {
 	right:20px;
@@ -32,6 +33,17 @@
     text-align: center;
     padding:20px;
     background:rgba(0,0,0,0.3);
+    color:#FFF;
+}
+
+
+.error-msg-holder 
+{
+	right:20px;
+    position: absolute;
+    text-align: center;
+    padding:20px;
+    background:rgba(255,0,0,0.5);
     color:#FFF;
 }
 
